# EBAC_PYTHON_WEBSCRAPING

./: .gitignore  README.md  pyproject.toml
code/python/project_webscraping/: 1_ibge_municipios_api.py  2_ibge_pop_request.py  3_col_pop.py  4_join_pop_mun.py  5_descritiva.py  6_graficos.py  8_mapaRR.py  ibge_pop_beautfulsoup.py
data/raw/: pop_corrigida.csv
data/ready/: pop_mun_final.csv  relatorio_estatistico_pop.csv
