[project]
name = "ebac-python-webscraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "xlrd>=2.0.2",
]
